--- a/public/index.html
+++ b/public/index.html
@@ -18,7 +18,7 @@
     <title>Kasa</title>
   </head>
   <body>
-    <noscript>You need to enable JavaScript to run this app.</noscript>
+    <script src="https://kit.fontawesome.com/5c15940b79.js" crossorigin="anonymous"></script>
     <div id="root"></div>
     
   </body>
